# test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
include/halcon12x64/halconcpp/: HOperatorSet.h
res/: R-C.jfif  R-C3.jfif
src/: Mainscene.cpp  Mainscene.h  Mainscene.ui  MyThread.h  MyThread_DisOneCircle.cpp  MyThread_DisOneCircle.h  MyThread_Discern.cpp  MyThread_Discern.h
src/Camera/: CameraParams.ui
src/EngDocument/: EngDocument.cpp  EngDocument.h  EngDocument.ui
src/LightSource/: LightSet.h
src/StationSet/: ModelTool.cpp  ModelTool.h  ModelTool.ui  MultipleNum.cpp  MultipleNum.ui  MyThread_ROI.h  ROITool.cpp  ROITool.h  ROITool.ui  StationAttribute.cpp  StationAttribute.ui  StationSet.cpp  StationSet.h  halconshare.cpp  halconshare.h
src/StationSet/SaveModel/: ModelPos_0.tup  region_13.hobj
src/SwitchUsers/: SwitchUsers.cpp  SwitchUsers.h  SwitchUsers.ui
src/hal/: CMakeLists.txt
src/hal/camera/: CMakeLists.txt  camera.cpp  camera.h
src/system/: CMakeLists.txt  basic.h  sigleClass.h
src/system/projectManager/: CMakeLists.txt  StationAttributeDef.h  StationSetDef.h  projectDef.h  projectManager.cpp  projectManager.h
src/ui/: Mainscene.cpp  Mainscene.h  MyThread.cpp  MyThread.h  MyThread_DisOneCircle.cpp  MyThread_Discern.cpp  basic.h
src/ui/Camera/: CameraParams.cpp
src/ui/CameraPara/: CameraParams.h
src/ui/EngDocument/: EngDocument.cpp  EngDocument.h  EngDocument.ui  SaveEngDocument.txt
src/ui/LightSource/: LightSet.cpp  LightSet.h  LightSet.ui
src/ui/StationSet/: ModelTool.cpp  ModelTool.h  MultipleNum.h  MyThread_Model.cpp  MyThread_Model.h  MyThread_ROI.cpp  SaveTemplateRecord.txt  StationAttribute.cpp  StationAttribute.h  StationAttribute.ui  StationAttributeDef.h  StationSet.cpp  StationSet.h  StationSet.ui  StationSetDef.h
src/ui/StationSet/SaveModel/: ModelPos_1.tup  ShapeModel_0.smd.shm  ShapeModel_1.smd.shm  region_01.hobj  region_11.hobj  region_12.hobj
src/ui/StationSet/roiTemplate/: MyThread_ROI.cpp  MyThread_ROI.h  ROITool.cpp  ROITool.h  roiDef.h  roiDraw.cpp
src/ui/SwitchUsers/: SwitchUsers.cpp  SwitchUsers.h  userDef.h
